--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "typescript": "^5.2.2",
     "vite": "^4.4.11"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "lucide-svelte": "^0.284.0"
+  }
 }
